--- a/styles/custom.scss
+++ b/styles/custom.scss
@@ -1,3 +1,9 @@
+@import "./scss/mixins";
+@import "./scss/variables";
+@import "./scss/container";
+@import "./scss/header";
+@import "./scss/footer";
+@import "./scss/login";
 
 html,
 body {
